removed male & female cause of api problems

--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
 							<th class="wilaya__header--element wilaya__table-element">
 								Guéri
 							</th>
-							<th class="wilaya__header--element wilaya__table-element">
+							<!--<th class="wilaya__header--element wilaya__table-element">
 								Hommes
 							</th>
 							<th class="wilaya__header--element wilaya__table-element">
 								Femmes
-							</th>
+							</th>-->
 						</tr>
 <!--					<tr class="wilaya__table--row">
 							<td class="wilaya__table-element td-element fr-case">test</td>
