readded the changes / api is up

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	</section>
 
 
-<!--	<section class="main-container table">
+	<section class="main-container table">
 		<div class="main-container__stats">
 				<div class="main-container__stats--intro">
 					<h2>Statistique Par Wilaya</h2>
@@ -158,12 +158,12 @@
 							<!--<th class="wilaya__header--element wilaya__table-element">
 								Hospitalisé
 							</th>-->
-							<!--<th class="wilaya__header--element wilaya__table-element">
+							<th class="wilaya__header--element wilaya__table-element">
 								Mort
 							</th>
 							<th class="wilaya__header--element wilaya__table-element">
 								Guéri
-							</th>-->
+							</th>
 							<!--<th class="wilaya__header--element wilaya__table-element">
 								Hommes
 							</th>
@@ -181,12 +181,12 @@
 							<td class="wilaya__table-element td-element deaths-case">test</td>
 							<td class="wilaya__table-element td-element recovers-case">test</td>
 -->								
-						<!--</tr>
+						</tr>
 					</table>
 				</div>
 		</div>
 	</section>
--->
+
 </body>
 
 
